# pwdmanager

./: .gitignore  .pre-commit-config.yaml  README.rst  makefile  mypy.ini  pyproject.toml  setup.py
pwdmanager/: commands.py  database.py  pwdmanager.py
tests/: helper.py  test_commands.py  test_database.py
