[tool.poetry]
name = "pwdmanager"
version = "1.0.2"
description = "command line tool to manage passwords"
authors = ["Alex <alex.git@ralouf.fr>"]
license = "GPL-3.0"

[tool.poetry.scripts]
pwdmanager = 'pwdmanager.pwdmanager:main'

[tool.poetry.dependencies]
python = "^3.7"
python-gnupg = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
flake8 = "^3.7"
mypy = "^0.720.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = "^4.3"
pytest-cov = "^2.7"
[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

