[tool.poetry]
name = "pwdmanager"
version = "1.0.0"
description = "command line tool to manage passwords"
authors = ["Alexandre G <alex.git@ralouf.fr>"]
license = "GPL-3.0"
repository = "https://github.com/bravefencermusashi/pwdmanager"
homepage = "https://github.com/bravefencermusashi/pwdmanager"
readme = "README.rst"
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
pwdmanager = 'pwdmanager.pwdmanager:main'

[tool.poetry.dependencies]
python = "^3.7"
python-gnupg = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
flake8 = "^3.7"
mypy = "^0.720.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = "^4.3"
pytest-cov = "^2.7"
pre-commit = "^1.18"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
